# Video-Filter

./: .gitignore  compile.sh  gstcustomfilter.c  gstcustomfilter.h  meson.build  readme.md  readme.txt
gstreamer-1.0/: libfv_gst.la  libfv_gst.so.0  libfv_gst.so.0.0.0  libgstbufcapture.la  libgstbufcapture.so.0  libgstbufcapture.so.0.0.0  libgstframetag.la  libgstframetag.so.0.0.0  libgstfv.la  libgstfv.so.0  libgstfv.so.0.0.0  libgstfvcodec.la  libgstfvcodec.so.0.0.0  libgstgpubufcpy.la  libgstgpubufcpy.so.0  libgstgpubufcpy.so.0.0.0  libgstrccr.la  libgstrccr.so.0.0.0  libgstrtspsink.la  libgstrtspsink.so.0  libgstrtspsink.so.0.0.0  libgstsmscsink.la  libgstsmscsink.so.0.0.0  libmeshare.la  libmeshare.so.0.0.0
gstreamer-1.0/include/gst/gl/: gstglconfig.h
gstreamer-1.0/python/: meplayer.py
src/: gstcustomfilter.c  gstcustomfilter.h  meson.build
